--- a/DAY--22/level-2/level-2.html
+++ b/DAY--22/level-2/level-2.html
@@ -8,12 +8,10 @@
 
 <body>
 	<header>
-		<h2>World Countries List</h2>
+		<h2 style="text-align: center; font-size: 5rem">WORLD COUNTRİES LİST</h2>
 
 		<h4 id="total-countries"></h4>
-		<h3>30DaysOfJavaScript:DOM-Day-2</h3>
-		<h3>Author: Asabeneh Yetayeh</h3>
-
+		<h3 style="text-align: center;">30DaysOfJavaScript:DOM-Day-2</h3>
 	</header>
 
 	<div class="countries-container">
